PIP-329: Updated for Java17 and logging.